src/objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Link__c</fullName>
        <label>Meeting Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>